# orga_3

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  README.md  mypy.ini
PS1/: dev_up.ps1  (+35 more)
backend/: .env.example  Dockerfile  README.md  __init__.py  alembic.ini  conftest.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema_meta.py  0002_models_core.py  (+5 more)
backend/app/: __init__.py  api.py  api_auth.py  api_rbac_demo.py  api_v1_assignments.py  api_v1_availability.py  api_v1_conflicts.py  api_v1_invitations.py  api_v1_missions.py  api_v1_orgs.py  api_v1_projects.py  api_v1_rates.py  api_v1_users.py  auth.py  cache.py  config.py  db.py  enums.py  invite_tokens.py  logging_conf.py  logging_setup.py  main.py  models.py  observability.py  py.typed  rbac.py  settings.py
backend/cli/: cc.py
backend/tests/: __init__.py  test_assignments_uniqueness.py  test_auth_flow.py  test_availabilities_conflict_ko.py  test_availabilities_flow_e2e.py  test_cache.py  test_conflicts_normalize_dt.py  test_conflicts_service_ko.py  test_conflicts_service_ok.py  test_exports_endpoints.py  test_exports_ics.py  test_healthz.py  test_invitations_accept.py  test_invitations_flow.py  test_invitations_tokens.py  test_migrations.py  test_models_crud.py  test_notifications_email.py  test_notifications_endpoints.py  test_notifications_rate_limit.py  test_notifications_tokens.py  test_observability.py  test_password_reset_flow.py  test_ping.py  test_rbac.py  test_reports_cache.py  test_reports_monthly_users.py  test_utils_unique_org_account.py  test_v1_endpoints.py  utils.py
(+173 files in other folders)
