[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orga-backend"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "SQLAlchemy==2.0.34",
    "typer==0.12.5",
    "reportlab==4.2.2",
]

[tool.setuptools]
# Decouverte controlee: inclure uniquement 'app' (et sous-packages)
packages = ["app"]

[tool.setuptools.package-data]
# alembic\* lu au runtime, pas distribue comme package python
app = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["backend/tests"]

[tool.coverage.run]
source = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
strict = true
